Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services
spec:
  rules:
  - http:
      paths:
      - path: /app/*
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 8080
